--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@tailwindcss/vite": "^4.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.5",
+    "react-scroll": "^1.9.2",
+    "styled-components": "^6.1.15",
     "tailwindcss": "^4.0.4"
   },
   "devDependencies": {
