--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "react-scroll": "^1.9.2",
+    "react-simple-typewriter": "^5.0.1",
+    "react-typed": "^2.0.12",
     "styled-components": "^6.1.15",
     "tailwindcss": "^4.0.4"
   },
